# StanfordCS

./: .pdm.toml  pyproject.toml  scraper.py
cs106a/babynames/: README.md  babygraphics.py  babynames.py
cs106a/ghost/: README.md  ghost.py
cs106a/sand/: README.md  grid.py  sand.py  waterfall.py
cs106a/tiptop/: README.md  tiptop.py
