[project]
name = "stanford-cs"
version = "0.0.1"
description = "Stanford CS Courses"
authors = [
    {name = "Victor Gorchilov", email = "victor@gorchilov.com"},
]
dependencies = [
    "black>=22.10.0",
    "numpy>=1.23.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"

[tool]
[tool.pdm]
